# cluster-node-api

./: .env  Cargo.toml  Makefile.toml  README.md  clusters.http  common.http  health.http  nodes.http  operations.http
docs/: architecture.drawio
http/: clusters.http
migrations/: 20211106162229_init.sql
src/: main.rs
src/application/: mod.rs  operation_service.rs
src/domain/: cluster.rs  mod.rs  node.rs  operation.rs
src/domain/models/: cluster.rs  mod.rs  node.rs  operation.rs
src/domain/repository/: cluster_repository.rs  mod.rs  node_repository.rs  operation_repository.rs  repository_error.rs
src/infrastructure/: auth.rs  memory_node_repository.rs  memory_repository.rs  mod.rs  postgres_cluster_repository.rs  postgres_node_repository.rs  postgres_repository.rs
src/infrastructure/controllers/: clusters.rs  features.rs  health.rs  mod.rs  nodes.rs  operations.rs
src/infrastructure/db/: entities.rs  memory_cluster_repository.rs  memory_node_repository.rs  mod.rs  postgres_cluster_repository.rs  postgres_node_repository.rs  postgres_operation_repository.rs
src/v1/: users.rs
