[package]
name = "cluster-node-api"
version = "0.1.0"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# server
actix-web = "4.0.1"
actix-cors = "0.6.0"
actix-web-httpauth = "0.6.0"
# serialization
serde_json = "1.0"
serde = "1.0"
# utils
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
# observability
tracing = "0.1"
tracing-subscriber = { version= "0.3", features = ["env-filter", "json", "time"] }
tracing-futures = "0.2"
# db
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"]}

[dev-dependencies]
actix-rt = "2"
mockall = "0.11"
actix-http = "3.0"
